--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,6 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up Java 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: 21
+
+    - name: Build WAR with Maven
+      run: mvn clean package -DskipTests
+
     - name: Configure AWS
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -30,6 +39,3 @@ jobs:
         docker build -t employee-app:dev .
         docker tag employee-app:dev 528922625383.dkr.ecr.ap-south-1.amazonaws.com/employee-app:dev
         docker push 528922625383.dkr.ecr.ap-south-1.amazonaws.com/employee-app:dev
-
-
-
